--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "gendiff"}]
 python = "^3.10"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
